# routes/userRoute.js
@@ -1,18 +1,11 @@
-const router = require('express').Router();
-const auth = require('../middleware/auth');
-
+const express = require('express');
+const router = express.Router();
 const userController = require('../controllers/userController');
 
-router.get("/", auth, userController.allUsers);
-
-router.post("/", auth, userController.createUser);
-router.post("/login", auth, userController.login);
-
-router.get("/:id", auth, userController.getSingleUser);
-
-router.post("/update/:id", auth, userController.updateUser);
-
-router.delete("/:id", auth, userController.deleteUser);
-router.delete("/logout", auth, userController.logout);
+router.get('/', userController.getAllUsers);
+router.post('/', userController.createUser);
+router.get('/:id', userController.getUser);
+router.patch('/:id', userController.updateUser);
+router.delete('/:id', userController.deleteUser);
 
 module.exports = router;
